reference-llvm/tests/should-fail/fail18.mu
// forking function w/ args

function bar(x) {
    ;
}

function @entry foo() {
    fork bar;
}
